<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>app.jmusic</groupId>
  <artifactId>jmusic</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>jmusic-app</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>13</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.10</version>
    </dependency>

    <dependency>
      <groupId>de.jensd</groupId>
      <artifactId>fontawesomefx</artifactId>
      <version>8.9</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.4</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <options>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
          </options>
          <mainClass>App</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
